heading gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 
 .privacy-policy{
   display: flex;
+  gap: 1em;
 }
 /* Mobile styles */
 @media screen and (min-width: 320px) and (max-width: 812px) {
