--- a/src/Components/Css/Introduction.css
+++ b/src/Components/Css/Introduction.css
@@ -4,7 +4,6 @@ body {
   --headingColor: #231f20;
   --textColor: #7b7979;
   font-family: "poppins";
-  text-align: justify;
   text-align: left;
   word-wrap: break-word;
   word-break: break-all;
